sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:6: error: value and is not a member of Boolean
  while (cycleTri==false and longeur!=2) {
                         ^AlgBubbleSort2:6: error: not found: value longeur
  while (cycleTri==false and longeur!=2) {
                             ^